# Vulpes

./: .clang-tidy  .gitattributes  .gitignore  CMakeLists.txt  README.md  doxygen.conf  idle.txt  makefile  player_state.xml  run_clang_tidy.sh
assets/: Player.txt  forest.json  player_state.json  world.json
assets/ai/: animation_and_die.json  attack.json  basic_enemy.json
assets/cutscenes/: door_transition.json
assets/cutscenes/boxes/: cutscene.json
assets/cutscenes/door_transition/: cutscene.json
assets/cutscenes/intro/: cutscene.json
assets/entities/: attack1.json  collectible.json  enemy.json  health.json  player.json
assets/entities/attack/: ai.json  entity.json  sprite_map.txt  state.json
assets/entities/collectible/: ai.json  entity.json
assets/entities/enemy/: ai.json  entity.json  state.json
assets/entities/flyer/: ai.json  entity.json  state.json
assets/entities/health/: ai.json  entity.json  state.json
assets/entities/player/: animations.json  entity.json  sprite_map.txt  state.json
assets/rooms/: minimal.json  room2.json  world.json
assets/rooms/_templates/: forest.json  shaders.json
assets/shaders/: blur.frag  color_fade.frag  heat.frag  kawase.frag  shockwave.frag
assets/states/: enemy_state.json  player_state.json
src/: animated_entity.cpp  base_entity.cpp  base_entity.h  event.h  file.cpp  hitbox.cpp  hitbox.h  input_event.cpp  input_event.h  log.h  main.cpp  movable_entity.cpp  movable_entity.h  player.cpp  player.h  state.cpp  state.h  stateful_entity.cpp  stateful_entity.h  transform.cpp  transform.h  util.h  utility.h  world.cpp  world.h
src/common/: base_entity.cpp  base_entity.h  file.cpp  hitbox.cpp  hitbox.h  log.h  render.cpp  render.h  transform.cpp  transform.h  world.cpp  world.h
src/common/utils/: common.h  input.h  state.h
src/editor/: main.cpp
src/editor/common/: common.cpp  common.h  editor_render.cpp  editor_render.h  top_menu.cpp  top_menu.h
src/editor/cutscene_editor/: cutscene_editor_main.cpp  cutscene_top_menu.cpp  cutscene_top_menu.h
src/editor/entity_editor/: editor_view.cpp  editor_view.h  entity_common.h  entity_editor_main.cpp  entity_editor_main.h  entity_top_menu.cpp  entity_top_menu.h  state_view.cpp  state_view.h  unpacked_entity.cpp  unpacked_entity.h  unpacked_state.cpp  unpacked_state.h
src/editor/level_editor/: command.cpp  command.h  common.cpp  common.h  editor_environment.cpp  editor_environment.h  editor_mouse.cpp  editor_mouse.h  level_editor_main.cpp  level_editor_main.h
src/editor/menus/: menu_actions.h  menu_collision.cpp  menu_main.cpp  menu_main.h  menu_movement.h  menu_subentity.cpp  top_menu.cpp  top_menu.h
src/game/: animated_entity.cpp  animated_entity.h  base_entity.cpp  base_entity.h  file.cpp  file.h  game_loop.cpp  game_loop.h  hitbox.cpp  input_event.cpp  input_event.h  main.cpp  movable_entity.cpp  movable_entity.h  player.cpp  player.h  render.cpp  render.h  state.cpp  state.h  stateful_entity.cpp  stateful_entity.h  transform.cpp  transform.h  world.cpp  world.h
src/game/ai/: ai_utils.cpp  ai_utils.h  instructions.h  interpreter.cpp  interpreter.h  program.cpp  program.h
src/game/attributes/: actions.cpp  actions.h  animated.cpp  animated.h  collision.cpp  collision.h  hitbox.cpp  hitbox.h  movable.cpp  movable.h  physics.cpp  physics.h  renderable.cpp  renderable.h  stateful.cpp  stateful.h  transform.cpp  transform.h
src/game/components/: actions.cpp  actions.h  ai.cpp  ai.h  animation.cpp  animation.h  collision.cpp  collision.h  component.cpp  component.h  component_store.cpp  component_store.h  damageable.cpp  damageable.h  death.cpp  death.h  hitbox.cpp  hitbox.h  movement.cpp  movement.h  physics.cpp  physics.h  rendering.cpp  stateful.cpp  stateful.h  subentity.cpp  subentity.h  transform.cpp  transform.h
src/game/system/: camera.cpp  camera.h  cutscene.cpp  cutscene.h  cutscene_handler.cpp  cutscene_handler.h  environment.cpp  environment.h  i_render.h  i_world_modify.cpp  i_world_read.cpp  input_event.cpp  input_event.h  render.cpp  render.h  shader_handle.cpp  shader_handle.h  system.cpp  system.h  world.cpp  world.h  world_interfaces.cpp
src/game/utils/: bimap.h  common.h  file.cpp  file.h  input.h  log.h  state.cpp  state.h  state_handler.cpp  state_handler.h  state_utils.h
src/level_editor/: action.h  command.cpp  command.h  cutscene_editor.cpp  cutscene_editor.h  editor_loop.cpp  editor_loop.h  editor_render.cpp  editor_render.h  history.cpp  history.h  main.cpp  menu.cpp  menu.h  menu_entries.h  menu_entry.cpp  menu_entry.h  mouse.cpp  mouse.h  operation.cpp  operation.h  text_input.cpp  text_input.h
src/level_editor/commands/: add.cpp  add.h  command.h  delete.cpp  delete.h  move.cpp  move.h  resize.cpp  resize.h
src/level_editor/editor_loop/: common.cpp  common.h  editor_environment.cpp  editor_environment.h  editor_mouse.cpp  editor_mouse.h
src/level_editor/menus/: menu_actions.cpp  menu_actions.h  menu_ai.cpp  menu_ai.h  menu_animation.cpp  menu_animation.h  menu_collision.cpp  menu_collision.h  menu_component.h  menu_damageable.cpp  menu_damageable.h  menu_death.cpp  menu_death.h  menu_main.cpp  menu_main.h  menu_movement.cpp  menu_movement.h  menu_physics.cpp  menu_physics.h  menu_rendering.cpp  menu_rendering.h  menu_stateful.cpp  menu_stateful.h  menu_subentity.cpp  menu_subentity.h  menu_transform.cpp  menu_transform.h  top_menu.cpp  top_menu.h
src/main/: main.cpp
src/state_editor/: main.cpp  state_list.cpp  state_list.h  state_object.cpp  state_object.h
src/state_graph/: main.cpp  state_parser.cpp  state_parser.h
src/utils/: state.h
test/: main.cpp
test/data/: test_world.json
test/src/: add.h  collision.cpp  collision.h  command_test.cpp  command_test.h  components.cpp  cutscene.cpp  death.cpp  entity_editor.cpp  environment.cpp  history.cpp  history.h  hitbox.cpp  hitbox.h  interpreter.cpp  main.cpp  move.cpp  move.h  state_test.cpp  unpacked_entity.cpp  unpacked_state_test.cpp  world_save.cpp  world_save.h
test/test_data/: test_world.json  test_world_2.json
tools/: commit_check.sh
(+257 files in other folders)
